--- a/tea/readme
+++ b/tea/readme
@@ -1,1 +1,12 @@
 laugh
+
+运行 go_sogou.py，爬关键词对应的问答列表里的url ，用到kw_sogou.txt
+
+第一批关键词无法分辨已经用了哪个，已经在“原始关键词.xlxs”里面标红
+
+生成links_sogou.txt
+
+
+运行pa_con_sogou.py，爬具体的问答内容，用到links_sogou.txt，结果直接入本地数据库
+
+t_article_daochu.xls是上个步骤生成本地数据库里导出来的数据
